--- a/SurfUp/climate_starter.ipynb
+++ b/SurfUp/climate_starter.ipynb
@@ -132,28 +132,6 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('2017-08-23',)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Find the most recent date in the data set in the measurement table.\n",
-    "most_recent_date = session.query(measurement.date).order_by(measurement.date.desc()).first()\n",
-    "most_recent_date"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
    "outputs": [],
    "source": [
     "# Create the inspector and connect it to the engine\n",
@@ -162,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +149,7 @@
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -207,6 +185,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('2017-08-23',)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the most recent date in the data set in the measurement table.\n",
+    "most_recent_date = session.query(measurement.date).order_by(measurement.date.desc()).first()\n",
+    "most_recent_date"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
     }
    ],
    "source": [
-    "# Find the most recent date in the database\n",
+    "# Now, finding the single most_recent_date in the measurement table\n",
     "most_recent_date = session.query(func.max(measurement.date)).scalar()\n",
     "most_recent_date = datetime.strptime(most_recent_date, '%Y-%m-%d').date()\n",
     "most_recent_date"
@@ -253,7 +253,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -285,35 +287,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Design a query to retrieve the last 12 months of precipitation data and plot the results. \n",
-    "# # Starting from the most recent data point in the database. \n",
-    "\n",
-    "# # Calculate the date one year from the last date in data set.\n",
-    "# one_year_ago = dt.date(2017,8,23) - dt.timedelta(days=365)\n",
-    "# # Perform a query to retrieve the data and precipitation scores\n",
-    "# results = session.query(measurement.date, measurement.prcp).filter(measurement.date >= one_year_ago).all()\n",
-    "\n",
-    "\n",
-    "# # Save the query results as a Pandas DataFrame. Explicitly set the column names\n",
-    "# measurement_df = pd.DataFrame(results, columns=['date', 'prcp']).rename(columns={'prcp': 'Precipitation', 'date': 'Date'})\n",
-    "\n",
-    "# # Sort the dataframe by date\n",
-    "# df = df.sort_values('Date')\n",
-    "\n",
-    "# # Use Pandas Plotting with Matplotlib to plot the data\n",
-    "# df.plot(\"date\",\"Precipitation\",label = 'Precipitation', rot = 90)\n",
-    "# plt.xlabel(\"Date\")\n",
-    "# plt.ylabel(\"Inches\")\n",
-    "# plt.legend(loc=\"upper right\")\n",
-    "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +362,7 @@
        "max         6.700000"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -448,7 +421,7 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -563,20 +536,20 @@
        "8  USC00518838           511"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Creating a DataFrame with specified column names\n",
+    "# Creating a DataFrame with specified column names to understand the dataset\n",
     "most_active_stations_data = pd.DataFrame(most_active_stations_list, columns=[\"Station Id\", \"Total Counts\"])\n",
     "most_active_stations_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +558,7 @@
        "[(54.0, 85.0, 71.66378066378067)]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
